[DROOLS-6746] make drools-core to depend on the static wiring instead of the dynamic one